Updated Unity project to use strings for booleans from Javascript

--- a/TransVoicesUnityProject/WebGL Build/index.html
+++ b/TransVoicesUnityProject/WebGL Build/index.html
@@ -23,9 +23,9 @@
     TOTAL_MEMORY: 268435456,
     errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
     compatibilitycheck: null,
-    dataUrl: "Release/build 13-16.data",
-    codeUrl: "Release/build 13-16.js",
-    memUrl: "Release/build 13-16.mem",
+    dataUrl: "Release/WebGL Build.data",
+    codeUrl: "Release/WebGL Build.js",
+    memUrl: "Release/WebGL Build.mem",
     
   };
 </script>
